################################################################################

2013-03-20	tboggs <tboggs@users.sourceforge.net>

    Added unit-testing sub-package.

    * tests/__init__.py: New file.
    * tests/run.py: New file to execute all standard unit tests.
    * tests/spyfile.py: New file for testing SpyFile I/O.
    * tests/spytest.py: New file with base class for unit tests.

    Changed envi.save option from `byteswap` to `byteorder`.

    * io/envi.py (save_image): Switched to `byteorder` keyword.

2013-03-19	tboggs <tboggs@users.sourceforge.net>

    * io/spyfile.py:
      (FileNotFoundError): New class
      (find_file_path): raise FileNotFoundError.

2013-03-18	tboggs <tboggs@users.sourceforge.net>

    Replaced `image` and `save_image` with `open_image` and
    `save_rgb`, respectively.

    * __init__.py: Import open_image.
    * spectral.py:
      - Renamed `image` to `open_image`.
      - Provide deprecation warning for `image`.
    * graphics/__init__.py: Import `save_rgb`.
    * graphics/graphics.py:  Rename `save_image` to `save_rgb` and
        provide deprecation warning for `save_image`.

2013-03-09	tboggs <tboggs@users.sourceforge.net>

    Applied autopep8 to all files.

    Switched to using byte order in image dtypes (rather than swapping bytes
    after reading data) for performance and simplification.

    * io/aviris.py (open): Set byte order in dtype.
    * io/bilfile.py (BilFile.read_*): Set byte order in dtype.
    * io/bipfile.py (BilFile.read_*): Set byte order in dtype.
    * io/bsqfile.py (BilFile.read_*): Set byte order in dtype.
    * io/envi.py (open, gen_params, save_image, create_image): Set byte
      order in dtype.
    * io/erdas.py (open): Set byte order in dtype.
    * io/spyfile.py (load): Set byte order in dtype.

2013-03-07	tboggs <tboggs@users.sourceforge.net>

    Fixed setting `status` object in top-level package and allow
    envi.save_image to handle TransformedImage objects.

    * io/envi.py: