@@ -34,7 +34,8 @@
 abort_on_fail = True
 
 import spyfile
+import transforms
 
 # List of all submodules to be run from the `run` submodule.
-all_tests = [spyfile]
+all_tests = [spyfile, transforms]
 
